--- a/estilos.css
+++ b/estilos.css
@@ -19,14 +19,14 @@ header{
 .cuerpo{
     position:absolute;
     width: 100%;
-    height: 1200px;
+    height: 1800px;
     top:10%;
     background-color:transparent;
 }
 
 .cuerpo2{
     width: 75%;
-    height: 1200px;
+    height: 1800px;
     right: 10%;
     transform: translate(15%);
     background: #ADA996;  /* fallback for old browsers */
@@ -335,10 +335,10 @@ nav{
 /* quinta SECCION*/
 .secion5{
     width: 100%;
-    height: 780px;
+    height: 1500px;
     background: #ADA996;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: -webkit-linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
 }
 
@@ -352,18 +352,33 @@ background: linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996); /* W3
 
 .tarjeta_proyecto{
     position: absolute;
-    width: 45%;
+    width: 50%;
     height: 45%;
-    margin-top: 50px;
-    background-image: url(images/imagen_proyecto1.png);
-    background-repeat: no-repeat;
-    background-size: contain;
+    margin-top: 50px;    
 }
 .margenes2{
     margin-left: 10%;
-    margin-right: 10%;
-    
-    
+    margin-right: 10%;   
+}
+
+.titulo{
+    font-size: 50px;
+    text-align: center;
+    background-color:rgba(0, 0, 0, 0.1);
+}
+
+.cuadro_imagenes{
+    width: 100%;
+    height: 500px;
+    background-size: cover;
+}
+.descripcion{
+    font-size: 30px;
+    width: 100%;
+    height: 350px;
+    background-color:rgba(0, 0, 0, 0.1);
+    text-align: justify;
+    padding: 30px 50px;
 }
 
 
