--- a/estilos.css
+++ b/estilos.css
@@ -351,34 +351,33 @@ nav{
 
 
 .tarjeta_proyecto{
-    position: absolute;
     width: 50%;
-    height: 45%;
-    margin-top: 50px;    
-}
-.margenes2{
-    margin-left: 10%;
-    margin-right: 10%;   
+    height: 350px;
+    transform: translate(50%);
+    
 }
 
 .titulo{
     font-size: 50px;
     text-align: center;
-    background-color:rgba(0, 0, 0, 0.1);
+    background-color:transparent;
+    border-radius: 2%;
 }
 
 .cuadro_imagenes{
     width: 100%;
     height: 500px;
-    background-size: cover;
+    background-size: contain;
+    padding: 5px 10px;
+   
 }
 .descripcion{
     font-size: 30px;
     width: 100%;
     height: 350px;
-    background-color:rgba(0, 0, 0, 0.1);
+    background-color: transparent;
     text-align: justify;
-    padding: 30px 50px;
+    padding: 30px 20px;
 }
 
 
@@ -470,10 +469,7 @@ nav{
     color: black;
 }
 
-.text-center{
-  
-    
-}
+
 footer{
     background: #ADA996;  /* fallback for old browsers */
 background: -webkit-linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996);  /* Chrome 10-25, Safari 5.1-6 */
@@ -717,14 +713,7 @@ background: linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996); /* W3
 }
 
 @media (max-width:1200px){
-    .margenes{
-        margin-left: 10%;
-        margin-right: 10%;
-    }
-    .tarjeta_proyecto{
-        width: 80%;
-        height: 40%;
-    }
+
 
     .slider{
         left: 0px;
