--- a/estilos.css
+++ b/estilos.css
@@ -4,7 +4,7 @@ header{
     width: 100%;
     height: 450px;
     background-image: url(images/principal1.jpg);
-    animation: movimiento 50s infinite linear;
+    animation: movimiento 80s infinite linear;
     background-size: cover;
 }
 @keyframes movimiento{
@@ -14,6 +14,14 @@ header{
     }to{
         background-position-y: bottom;
     }
+}
+
+.cubre_fondo{
+    position:absolute;
+    width: 100%;
+    height: 450px;
+    background-color: rgba(52, 144, 165, 0.8);
+    top:0%;
 }
 
 .cuerpo{
@@ -57,11 +65,13 @@ nav{
     
 }
 .logo{
+    margin-top: 15px;
     background-image: url(images/logo.png);
-    background-size:cover;
-    width: 120px;
-    height: 120px;
-    border-radius: 50%;
+    background-size:contain;
+    width: 100px;
+    height: 100px;
+    border-radius: 5%;
+    background-repeat: no-repeat;
 }
 .boton{
     display: none;
@@ -82,8 +92,6 @@ nav{
 
 .enlaces-menu{
     display: flex;
-    padding:0;
-   
 }
 .enlaces-menu li{
     padding: 0 40px;
@@ -95,6 +103,7 @@ nav{
     font-size: 30px;
     color: rgb(68, 68, 68);
     font-weight: bolder;
+    
   
 }
 
@@ -115,7 +124,7 @@ nav{
 }
 
 .cuadrado{
-    top:130px;
+    top:190px;
     width: 570px;
     margin-left: 23%;
     height: 800px;
@@ -252,6 +261,8 @@ nav{
 }
 
 .secion3 h2{
+    padding: 25px;
+    
     text-align: center;
     font-size: 50px;
 }
@@ -343,10 +354,9 @@ nav{
 }
 
 .secion5 h2{
-    margin-left: 40px;
     text-align: center;
     padding: 25px;
-    font-size: 50px;
+    font-size: 50px;  
 }
 
 
@@ -355,21 +365,22 @@ nav{
     height: 350px;
     transform: translate(50%);
     
+    
 }
 
 .titulo{
     font-size: 50px;
     text-align: center;
     background-color:transparent;
-    border-radius: 2%;
+  
 }
 
 .cuadro_imagenes{
     width: 100%;
-    height: 500px;
-    background-size: contain;
+    height: 510px;
+    background-size: cover;
     padding: 5px 10px;
-   
+    border: 5px solid rgba(56, 37, 37, 0.5);
 }
 .descripcion{
     font-size: 30px;
@@ -471,9 +482,10 @@ nav{
 
 
 footer{
+    
     background: #ADA996;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: -webkit-linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
 }
 
